--- a/cookhack/src/styles/_nav.scss
+++ b/cookhack/src/styles/_nav.scss
@@ -67,4 +67,41 @@
     transform: scale(1.1);
     color: #ffc13d;
   }
+  .container {
+    position: relative;
+    display: inline-block;
+  }
+  .button {
+    padding: 0;
+    width: 20px;
+    border: 0;
+    background-color: #900;
+    color: #ffc13d;
+    cursor: pointer;
+    outline: 0;
+    font-size: 30px;
+  }
+  .dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 300px;
+    z-index: 2;
+    border: 1px solid rgba(0, 0, 0, 0.04);
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14);
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  li {
+    padding: 8px 12px;
+  }
+  
+  li:hover {
+    background-color: rgba(0, 0, 0, 0.14);
+    cursor: pointer;
+  }
 }
