Added recipe description

--- a/cookhack/src/styles/_dishModal.scss
+++ b/cookhack/src/styles/_dishModal.scss
@@ -50,7 +50,7 @@
     margin-top: 5rem;
     box-shadow: #ffc13d 0px 3px 8px;
     cursor: pointer;
-    color:rgb(0, 0, 0);
+    color:#ffc13d;
   }
   .modal-exit-btn {
     position: absolute;
