--- a/cookhack/src/styles/Signup.css
+++ b/cookhack/src/styles/Signup.css
@@ -5,7 +5,7 @@
 
     justify-content: center;
     align-items: center;
-    background: url('../assets/login-background.jpg'); 
+    background: url('../assets/background.jpeg'); 
     background-size: cover;
     background-position: center;
 }
@@ -18,6 +18,7 @@
     width: 100%;
     height: 5vh;
     font-size: 20px;
+    color: #ffc13d;
 }
 
 .Signup-header2 {
@@ -36,8 +37,8 @@
 
 .Signup-field {
     font-size: 18px;
-    border: solid 1px #900;
-    color: #900;
+    border: solid 1px rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     border-radius: 2px;
     padding: 10px;
     height: 20px;
