--- a/cookhack/src/styles/_Login.scss
+++ b/cookhack/src/styles/_Login.scss
@@ -5,7 +5,7 @@
 
     justify-content: center;
     align-items: center;
-    background: url('../assets/login-background.jpg'); 
+    background: url('../assets/background.jpeg'); 
     background-size: cover;
     background-position: center;
 }
